tests/ui/traits/const-traits/const-impl-norecover.stderr
error[E0015]: cannot call non-const associated function `Foo::bar` in constants
  --> $DIR/const-impl-norecover.rs:9:15
   |
LL | const _: () = Foo::bar();
   |               ^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
